--- a/pom.xml
+++ b/pom.xml
@@ -15,10 +15,19 @@ Copyright © 2014 Visual Illusions Entertainment
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <canary.main.class>${project.groupId}.${project.artifactId}.NewU</canary.main.class>
-        <vimcplugin.version>1.1.0-SNAPSHOT</vimcplugin.version>
+        <mcpluginlib.version>1.2.0-SNAPSHOT</mcpluginlib.version>
         <status.url>http://status.visualillusionsent.net/</status.url>
         <devs>darkdiplomat</devs>
+        <license.type>GNU General Public License v3</license.type>
+        <license.url>http://www.gnu.org/licenses/gpl.html</license.url>
+        <copyright.years>${project.inceptionYear}-${current.year}</copyright.years>
         <build.number/>
+        <build.number.display/>
+        <!-- Jar Signing -->
+        <keystore.path/>
+        <keystore.alias/>
+        <keystore.pass/>
+        <keystore.key.pass/>
     </properties>
     <organization>
         <name>Visual Illusions Entertainment</name>
@@ -69,9 +78,9 @@ Copyright © 2014 Visual Illusions Entertainment
     </ciManagement>
     <repositories>
         <repository>
-            <id>vi-repo2</id>
+            <id>vi-repo</id>
             <name>Visual Illusions Repository</name>
-            <url>http://repo2.visualillusionsent.net/</url>
+            <url>http://repo.visualillusionsent.net/repository/public</url>
         </repository>
         <repository>
             <id>greatman-code</id>
@@ -81,13 +90,13 @@ Copyright © 2014 Visual Illusions Entertainment
     <dependencies>
         <dependency>
             <groupId>net.visualillusionsent</groupId>
-            <artifactId>vimcplugin</artifactId>
-            <version>${vimcplugin.version}</version>
+            <artifactId>mcpluginlib</artifactId>
+            <version>${mcpluginlib.version}</version>
         </dependency>
         <dependency>
             <groupId>net.visualillusionsent</groupId>
             <artifactId>dconomy</artifactId>
-            <version>3.0.0-SNAPSHOT</version>
+            <version>3.0.1</version>
         </dependency>
         <dependency>
             <groupId>com.greatmancode</groupId>
@@ -101,7 +110,7 @@ Copyright © 2014 Visual Illusions Entertainment
         </dependency>
     </dependencies>
     <build>
-        <finalName>${project.name}-${project.version}-${build.number}</finalName>
+        <finalName>${project.name}-${project.version}${build.number.display}</finalName>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
@@ -167,7 +176,7 @@ Copyright © 2014 Visual Illusions Entertainment
                             <Status-URL>${status.url}</Status-URL>
                             <Wiki-URL>${project.url}</Wiki-URL>
                             <Developers>${devs}</Developers>
-                            <Copyright>${project.inceptionYear}<!-- -${current.year}--></Copyright>
+                            <Copyright>${copyright.years}</Copyright>
                         </manifestEntries>
                     </archive>
                 </configuration>
@@ -198,10 +207,10 @@ Copyright © 2014 Visual Illusions Entertainment
                         <java>SLASHSTAR_STYLE</java>
                     </mapping>
                     <properties>
-                        <name>${project.name}</name>
-                        <years>${project.inceptionYear}<!-- -${current.year}--></years>
-                        <gpl.type>GNU General Public License</gpl.type>
-                        <license.url>http://www.gnu.org/licenses/gpl.html</license.url>
+                        <project.name>${project.name}</project.name>
+                        <copyright.years>${copyright.years}</copyright.years>
+                        <license.type>${license.type}</license.type>
+                        <license.url>${license.url}</license.url>
                     </properties>
                     <includes>
                         <include>src/main/java/**</include>
@@ -222,39 +231,33 @@ Copyright © 2014 Visual Illusions Entertainment
                         <configuration>
                             <artifactSet>
                                 <includes>
-                                    <!-- Only need to shade the VIMCPlugin stuff -->
-                                    <include>net.visualillusionsent:vimcplugin</include>
+                                    <!-- Only need to shade the MCPluginLib stuff -->
+                                    <include>net.visualillusionsent:mcpluginlib</include>
                                 </includes>
                             </artifactSet>
                             <filters>
                                 <filter>
-                                    <artifact>net.visualillusionsent:vimcplugin</artifact>
+                                    <artifact>net.visualillusionsent:mcpluginlib</artifact>
                                     <includes>
                                         <!-- Always include the license stuff -->
                                         <include>META-INF/license/**</include>
+                                        <!-- Always include the Root certificate -->
+                                        <include>META-INF/certificates/**</include>
                                         <!-- Always include base VIMCPlugin stuff -->
                                         <include>net/visualillusionsent/minecraft/plugin/**</include>
-                                        <!-- It Canary's CoffeePotControlProtocol -->
-                                        <include>net/visualillusionsent/minecraft/plugin/canary/**</include>
                                     </includes>
                                     <excludes>
-                                        <!-- Bukkit & Spout are unneeded -->
-                                        <exclude>net/visualillusionsent/minecraft/plugin/bukkit/**</exclude>
-                                        <exclude>net/visualillusionsent/minecraft/plugin/spout/**</exclude>
+                                        <!-- Sponge is unused at this time -->
+                                        <exclude>net/visualillusionsent/minecraft/plugin/sponge/**</exclude>
                                     </excludes>
                                 </filter>
                             </filters>
                             <!-- Relocate the classes to appropriate packages -->
                             <relocations>
-                                <!-- Relocate base VIMCPlugin stuff to base of plugin -->
+                                <!-- Relocate base MCPlugin stuff to base of plugin -->
                                 <relocation>
                                     <pattern>net.visualillusionsent.minecraft.plugin</pattern>
-                                    <shadedPattern>${project.groupId}.${project.artifactId}</shadedPattern>
-                                </relocation>
-                                <!-- Canary -->
-                                <relocation>
-                                    <pattern>net.visualillusionsent.minecraft.plugin.canary</pattern>
-                                    <shadedPattern>${project.groupId}.${project.artifactId}</shadedPattern>
+                                    <shadedPattern>${project.groupId}.${project.artifactId}.lib</shadedPattern>
                                 </relocation>
                             </relocations>
                         </configuration>
@@ -263,4 +266,58 @@ Copyright © 2014 Visual Illusions Entertainment
             </plugin>
         </plugins>
     </build>
+    <profiles>
+        <profile>
+            <id>jenkins</id>
+            <activation>
+                <property>
+                    <name>BUILD_NUMBER</name>
+                </property>
+            </activation>
+            <properties>
+                <build.number>${BUILD_NUMBER}</build.number>
+                <build.number.display>-b${BUILD_NUMBER}</build.number.display>
+            </properties>
+        </profile>
+        <!-- Should remain last profile -->
+        <profile>
+            <id>sign-jar</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-jarsigner-plugin</artifactId>
+                        <version>1.3.2</version>
+                        <executions>
+                            <execution>
+                                <id>sign</id>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>verify</id>
+                                <goals>
+                                    <goal>verify</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <archiveDirectory>target/</archiveDirectory>
+                            <excludes>
+                                <exclude>**/dummyload.jar</exclude>
+                            </excludes>
+                            <includes>
+                                <include>**/*.jar</include>
+                            </includes>
+                            <keystore>${keystore.path}</keystore>
+                            <alias>${keystore.alias}</alias>
+                            <storepass>${keystore.pass}</storepass>
+                            <keypass>${keystore.key.pass}</keypass>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
